@startuml classDiagram_examplesitcasynccancel

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
left to right direction

' ============================================================================
' Application Classes
' ============================================================================

package "Examples::Itc::AsyncCancel" {

    class "example.cpp" as exampleApp <<application>>

    class IFlashRequest <<abstract>> {
        + request(msg : FlashMsg&) : void
        + request(msg : FlashCancelMsg&) : void
    }

    class IFlashResponse <<abstract>> {
        + response(msg : FlashMsg&) : void
        + response(msg : FlashCancelMsg&) : void
    }

    class Client {
        + Client(clientsEventQueue : IQueue&, serverSAP : IFlashRequest::SAP&, flashPatterns : FlashPattern_T[], numFlashPatterns : unsigned, shutdownSignal : Semaphore&)
        + request(msg : OpenMsg&) : void
        + request(msg : CloseMsg&) : void
        + response(msg : FlashMsg&) : void
        + response(msg : FlashCancelMsg&) : void
    }

    class Server {
        + Server(myEventQueue : IQueue&)
        + request(msg : OpenMsg&) : void
        + request(msg : CloseMsg&) : void
        + request(msg : FlashMsg&) : void
        + request(msg : FlashCancelMsg&) : void
    }

    IFlashRequest  -[hidden]down- IFlashResponse
    IFlashResponse -[hidden]down- Client
    Client         -[hidden]down- Server
}

' ============================================================================
' Kit Classes  (right column, stacked vertically)
' ============================================================================

package "Kit::EventQueue" {
    class "Server" as EqServer
}

package "Kit::Itc" {
    class OpenCloseSync
    class ResponseMessage

    OpenCloseSync -[hidden]down- ResponseMessage
}

package "Kit::System" {
    class Timer
    class Thread
    class Shutdown
    class Semaphore

    Timer    -[hidden]down- Thread
    Thread   -[hidden]down- Shutdown
    Shutdown -[hidden]down- Semaphore
}

package "Kit::Container" {
    class SList
}

' ============================================================================
' Layout hints
' ============================================================================

EqServer        -[hidden]down-  OpenCloseSync
ResponseMessage -[hidden]down-  Timer
Semaphore       -[hidden]down-  SList

' ============================================================================
' Inheritance
' ============================================================================

Client --|> IFlashResponse
Client --|> OpenCloseSync
Server --|> IFlashRequest
Server --|> OpenCloseSync
Server --|> Timer

' ============================================================================
' example.cpp usage / composition relationships
' ============================================================================

exampleApp *--  Client   : client_
exampleApp *--  Server   : myServer_
exampleApp *--  EqServer : mbox_
exampleApp *--  Semaphore : shutdownSignal_
exampleApp ..>  Thread   : create / destroy
exampleApp ..>  Shutdown : notifyShutdownHandlers()

Client ..>  Server          : Flash Server (SAP)
Client ..>  ResponseMessage : m_flashResponseMsg, m_flashCancelResponseMsg
Client ..>  Semaphore       : signals

Server *--  SList : m_flashRequestList

IFlashResponse ..> IFlashRequest : FlashMsg / FlashCancelMsg

@enduml
